--- a/css2.css
+++ b/css2.css
@@ -1,201 +1,138 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
 }
 
-body {
-    font-family: Georgia, "Times New Roman", Times, serif;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 50px;
+    background-color: #fff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.signup-btn {
+    background: black;
     color: white;
-    background-color: black;
-  }
-  
-  .container {
-    max-width: 50rem;
-    margin: 2rem auto;
-    padding: 0px 2rem;
-    border: 1px solid;
-  }
-  
-  .main-heading {
-    font-size: 4rem;
-    margin: 2rem 0rem 1rem;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    background: #fef4d4;
+}
+
+.hero-text h1 {
+    font-size: 36px;
+    margin: 0;
+}
+
+.hero-text h1 span {
+    background: yellow;
+    padding: 5px;
+}
+
+.hero-text p {
+    margin: 10px 0;
+}
+
+.shop-btn {
+    background: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.hero-image img {
+    width: 300px;
+    border-radius: 10px;
+}
+
+.brands {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px 0;
+    background: rgb(226, 200, 70);
+}
+
+.brands img {
+    height: 40px;
+}
+
+.new-arrivals {
+    text-align: center;
+    padding: 50px;
+}
+
+.new-arrivals h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.products {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.product {
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product img {
+    width: 150px;
+    border-radius: 10px;
+}
+
+.product p {
+    font-weight: bold;
+}
+
+.product a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+footer {
+    background: black;
     color: white;
     text-align: center;
-  }
-  
-  /* form section */
-  .form-class {
-    margin: 2rem 0px;
-  }
-  
-  .form-control {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .heading-field {
-    margin: 1rem 0px 0.6rem;
-  }
-  
-  .field-head {
-    font-size: 2rem;
-  }
-  
-  .input-div {
-    margin-bottom: 1rem;
-  }
-  
-  .field-inputs {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
-  
-  .form-control-input {
-    font-size: 1.5rem;
-    padding: 0.4rem 0px;
-    text-indent: 0.5rem;
-    border: none;
-    outline: 1px solid #999;
-    border-radius: 7px;
-    width: 100%;
-    color: #999;
-  }
-  option {
-    color: #999;
-  }
-  .radio {
-    outline: none;
-  }
-  
-  .form-control-input:focus {
-    color: #212529;
-    background-color: #fff;
-    border-color: #707c28;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
-  }
-  
-  .help-text {
-    font-size: 0.7rem;
-    margin-top: 0.4rem;
-    padding: 0.1rem;
-  }
-  
-  button {
-    font-size: 2rem;
-    margin: 0px auto;
-    display: block;
-    color: wite;
-    padding: 0.5rem 0.8rem;
-    border: 1px solid white;
-    background-color: #28a84a;
-    color: white;
-    border-radius: 10px;
-    box-shadow: 1px #0000;
-    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
-  }
-  
-  h3 {
-    color:#270d0d00;
-    font-size: 20px;
-
-  }
-  
-  body{
-    margin:0;
-    padding:0;
-    background:rgba(0,0,0,.9);
-  }
-  ul{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    margin:0;
-    padding:0;
-    display:flex;
-    
-  }
-  ul li{
-    list-style:none;
-    width:40px;
-    height:40px;
-    background:#fff;
-    border-radius:50%;
-    animation:grow 1.6s ease-in-out infinite;
-  }
-    @keyframes grow
-    {
-      0% , 40% , 100%
-      {
-        transform:scale(0.2);
-      }
-      20%{
-         transform:scale(1);
-  
-      }
-    }
-  
-  ul li:nth-child(1){
-    animation-delay:-1.4s;
-    background:#ffff00;
-    box-shadow:0 0 50px #ffff00;
-    
-  }
-  ul li:nth-child(2){
-    animation-delay:-1.2s;
-    background:#76ff03;
-    box-shadow:0 0 50px #76ff03;
-    
-  }
-  ul li:nth-child(3){
-    animation-delay:-1s;
-    background:#f06292;
-    box-shadow:0 0 50px #f06292;
-    
-  }
-  ul li:nth-child(4){
-    animation-delay:-0.8s;
-    background:#4fc3f7;
-    box-shadow:0 0 50px #4fc3f7;
-    
-  }
-  ul li:nth-child(5){
-    animation-delay:-0.6s;
-    background:#ba68c8;
-    box-shadow:0 0 50px #ba68c8;
-    
-  }
-  ul li:nth-child(6){
-    animation-delay:-0.4s;
-    background:#f57c00;
-    box-shadow:0 0 50px #f57c00;
-    
-  }
-  ul li:nth-child(7){
-    animation-delay:-0.2s;
-    background:#673ab7;
-    box-shadow:0 0 50px #673ab7;
-    
-  }
-
-  body{
-    margin: 0;
-  }
-  #background{
-    position: absolute;
-    margin: 0 auto;
-    top: calc(50%-100%);
-    right:calc(50%-100%);
-    width: 100%;
-    height: 300%;
-    background-color:#fff;
-    box-shadow:
-      inset 100px 0 180px #0ff,
-      inset 100px 0 300px #0f3,
-      inset 80px 100px 600px #ff0;
-    z-index: -100;
-  }
-  /* form section ends */
+    padding: 20px;
+    margin-top: 30px;
+}
